--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,25 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+tmp
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
