--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "recharts": "^1.5.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
@@ -29,6 +30,7 @@
     "@types/react-dom": "^16.8.2",
     "@types/react-router": "^4.4.4",
     "@types/react-router-dom": "^4.3.1",
+    "@types/recharts": "^1.1.14",
     "@types/styled-components": "4.0.3",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.3.3333"
