--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "my-react-bootstrap",
+  "name": "dsp2019-tool-frontend",
   "version": "0.1.0",
   "author": "Teemu Koivisto",
+  "homepage": "https://datascienceproject2019-codescoop.github.io/dsp2019-tool/",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
     "mobx": "^5.9.0",
@@ -21,7 +23,8 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "lint": "tslint --project ./ -c tslint.json",
-    "lint:fix": "tslint --fix --project ./ -c tslint.json"
+    "lint:fix": "tslint --fix --project ./ -c tslint.json",
+    "deploy": "rm -r ../static || true && npm run build && mv ./build/** ../"
   },
   "devDependencies": {
     "@types/jest": "^24.0.9",
