--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "papaparse": "^4.6.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-icons": "^3.5.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.9",
     "@types/node": "^11.10.5",
+    "@types/papaparse": "^4.5.9",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-router": "^4.4.4",
