--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
+Deprecated==1.2.5
 Flask==1.0.2
 Flask-Cors==3.0.7
 gunicorn==19.9.0
@@ -12,6 +13,10 @@ MarkupSafe==1.1.1
 numpy==1.16.2
 pandas==0.24.2
 patsy==0.5.1
+pkg-resources==0.0.0
+PyGithub==1.43.6
+PyJWT==1.7.1
+pyspark==2.4.0
 python-dateutil==2.8.0
 pytz==2018.9
 requests==2.21.0
@@ -22,3 +27,4 @@ sklearn==0.0
 statsmodels==0.9.0
 urllib3==1.24.1
 Werkzeug==0.15.1
+wrapt==1.11.1
